--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  "homepage": "https://AbbasAliAAM.github.io/weather-ui",
   "name": "weather-ui",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://weather-tracker-api-production.up.railway.app",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
